# data-pipeline

./: .gitignore  ARCHITECTURE.md  Dockerfile  NOTES.md  README.md  markers.json  markers2.json  pyproject.toml  test_events.json  versions.json  versions2.json
.github/workflows/: ci.yml  deploy.yml
infra/: backend.tf  main.tf  outputs.tf  variables.tf
infra/envs/: dev.tfvars  prod.tfvars
infra/modules/ecr/: main.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/monitoring/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
pipeline/: cli.py  metrics.py  schema.py  writer.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cli.py  test_schema.py  test_transform.py
